fix: add github

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -661,6 +661,13 @@
    "source": [
     "R// Encontramos el codo exactamente en 3 con nuestro método manual podemos concluir que 3 clusters es la elección más natural o apropiada para estos datos."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "link del repo: https://github.com/droldan2019310/HT2-CLUSTERING/blob/main/notebook.ipynb"
+   ]
   }
  ],
  "metadata": {
